# App-TobiiPro

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TobiiLib.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  tobiifinder.cpp  tobiilogo.qrc  tobiipro.cfg  tobiisynctest.cpp
cmake/: Findtobii_research.cmake
